2010-09-17  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Make WebNumbers immutable matching CF.

        * Shared/WebNumber.h:
        (WebKit::WebNumber::value):
        (WebKit::WebNumber::WebNumber):
        * UIProcess/API/C/WKNumber.cpp:
        (WKUInt64GetValue):
        * UIProcess/API/C/WKNumber.h:

2010-09-17  Sam Weinig  <sam@webkit.org>

        Reviewed by John Sullivan.

        Add bool wrapper for WebKit2 API
        https://bugs.webkit.org/show_bug.cgi?id=45985

        * Shared/APIObject.h:
        * Shared/WebNumber.h:
        * UIProcess/API/C/WKAPICast.h:
        * UIProcess/API/C/WKBase.h:
        * UIProcess/API/C/WKNumber.cpp:
        (WKBooleanGetTypeID):
        (WKBooleanCreate):
        (WKBooleanGetValue):
        (WKBooleanSetValue):
        * UIProcess/API/C/WKNumber.h:

2010-09-16  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Add support for sending synchronous messages from the InjectedBundle to the WKContext
        <rdar://problem/8365320>
        https://bugs.webkit.org/show_bug.cgi?id=44785

        * Shared/CoreIPCSupport/WebContextMessageKinds.h:
        * UIProcess/API/C/WKContext.h:
        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::didReceiveSynchronousMessageFromInjectedBundle):
        (WebKit::WebContext::didReceiveMessage):
        (WebKit::WebContext::didReceiveSyncMessage):
        * UIProcess/WebContext.h:
        * UIProcess/WebContextInjectedBundleClient.cpp:
        (WebKit::WebContextInjectedBundleClient::didReceiveSynchronousMessageFromInjectedBundle):
        * UIProcess/WebContextInjectedBundleClient.h:
        * UIProcess/WebProcessProxy.cpp:
        (WebKit::WebProcessProxy::didReceiveSyncMessage):
        * WebProcess/InjectedBundle/API/c/WKBundle.cpp:
        (WKBundlePostSynchronousMessage):
        * WebProcess/InjectedBundle/API/c/WKBundle.h:
        * WebProcess/InjectedBundle/InjectedBundle.cpp: